--- a/public/burger.html
+++ b/public/burger.html
@@ -67,12 +67,12 @@
         <div class="unique-product">
             <div style="width: 50%; font-family: 'UVNSachVo'; margin-left: 50px;">
                 <div class="unique-product-title">OUR UNIQUE PRODUCT</div>
-                <div class="unique-product-description" id="unique-product-description">You have Pizza on top of your
-                    Burger.</br>
-                    You can choose your top and your middle your own.</br>
-                    We call it Pizza Burger.
+                <div class="unique-product-title">Burger pizza</div>
+                <div class="unique-product-description" id="unique-product-description">
+                    Our special combination of burger and pizza</br>
+                    You can choose your top and your middle your own</br>
                 </div>
-                <div class="top-middle-text">TOP</div>
+                <div class="top-middle-text" id="top-text">TOP</div>
                 <div style="display: flex; margin-left: 30px;">
                     <div class="burger-pizza-card"><img src="./images/IconMincedBeef.jpg">
                         <div id="minced-beef-text">Minced Beef</div>
@@ -84,7 +84,7 @@
                         <div id="smoked-bacon-text">Smoked Bacon</div>
                     </div>
                 </div>
-                <div class="top-middle-text">MIDDLE</div>
+                <div class="top-middle-text" id="middle-text">MIDDLE</div>
                 <div style="display: flex; margin-left: 30px;">
                     <div class="burger-pizza-card"><img src="./images/IconSmokedBacon.jpg">
                         <div id="smoked-bacon-text-2">Smoked Bacon</div>
@@ -97,7 +97,9 @@
                     </div>
                 </div>
             </div>
-            <div style="width: 50%;"><img style="width: 100%;" src="./images/PizzaBurger.png"></div>
+            <div style="width: 50%;">
+                <img style="width: 100%;" src="./images/PizzaBurger.png">
+            </div>
         </div>
         <div class="blank-space-resize"></div>
         <div class="meat">
@@ -122,15 +124,21 @@
         <div class="blank-space-resize"></div>
         <footer>
             <div style="width: 100%;">
-                <div class="blank-space-footer"></div>
+                <div class="blank-space-resize"></div>
+                <div class="blank-space-resize"></div>
+                <div class="blank-space-resize"></div>
                 <div style="display: flex; font-family: 'UVNHongHaHep'; color: white; font-size: 18px;">
                     <img style="width: 117px; height: 72px;" src="./images/logo.png">
                     <div style="margin-left: 30px; width: 40%;">
                         <ul style="color: #e74e4e; font-size: 30px;">Đà Nẵng</ul>
-                        <ul>03 Lê Thánh Tôn street, Hải Châu district</ul>
-                        <ul>Lô 16-18 An Thượng 32 street, Ngũ Hành Sơn district</ul>
+                        <ul>03 Lê Thánh Tôn, Hải Châu</ul>
+                        <ul>Lô 16-18 An Thượng 32, Ngũ Hành Sơn</ul>
                         <ul style="color: #e74e4e; font-size: 30px;">Hội An</ul>
-                        <ul>54 Nguyễn Thị Minh Khai street, Cẩm Phô</ul>
+                        <ul>54 Nguyễn Thị Minh Khai, Cẩm Phô</ul>                        
+                        <ul>93 Phan Châu Trinh, Minh An</ul>
+                        <ul>128 Nguyễn Thái Học, Minh An</ul>
+                        <ul style="color: #e74e4e; font-size: 30px;">TP Hồ Chí Minh</ul>
+                        <ul>32 Đường 2C, Phú Mỹ, District 7</ul>
                     </div>
                     <div style="margin-left: 30px; display: grid; width: 20%;">
                         <ul style="color: #e74e4e; font-size: 30px;">Products</ul>
@@ -194,8 +202,10 @@
             }, 500)
         }
         if (window.location.hash == "#vie") {
-            document.getElementById("unique-product-description").innerHTML = "Bạn sẽ được thêm một lớp Pizza phía trên Burger.</br>Chúng tôi gọi nó là Pizza Burger."
+            document.getElementById("unique-product-description").innerHTML = "Sự kết hợp đặc biệt giữa Burger và Pizza</br>Bạn có thể chọn mặt trên và mặt giữa tùy thích</br>"
             document.getElementById("meat-text").innerHTML = "Tất cả thịt chúng tôi sử dụng đều được mua mới đều đặn</br>và lựa chọn vô cùng kĩ lưỡng.</br>Chúng tôi phục vụ những chiếc bánh burger ngon nhất</br>với loại thịt tối nhất để làm hài lòng thực khách."
+            document.getElementById("top-text").innerHTML = "Mặt trên"
+            document.getElementById("middle-text").innerHTML = "Mặt giữa"
             document.getElementById("minced-beef-text").innerHTML = "Bò bằm"
             document.getElementById("sausage-text").innerHTML = "Xúc xích"
             document.getElementById("smoked-bacon-text").innerHTML = "Bò xông khói"
@@ -212,13 +222,6 @@
                 document.getElementById("content").style = null;
             });
         } catch (e) { };
-    </script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('*').bind('cut copy paste contextmenu', function (e) {
-                e.preventDefault();
-            })
-        });
     </script>
     <script src="burger-nav.js"></script>
 </body>
