--- a/public/gelato.html
+++ b/public/gelato.html
@@ -52,6 +52,7 @@
             </div>
             <div class="blank-space-resize"></div>
             <div class="products-cards" style="display: inline;" id="products-cards">
+                <ul id="flavours">General Flavours</ul>
                 <div class="products-cards">
                     <div class="product-card">
                         <img src="./images/CardChocolate.png">
@@ -141,6 +142,7 @@
                 margin-top: 10%;
                 margin-bottom: 15%;">
                     <img style="width: 100%;" src="./images/Gelato for wholesale.png">
+                    <ul id="contact-for-details" style="font-size: 40pt; margin: 0; text-align: center;">Contact for more details</ul>
                     <div class="call-button">
                         <a href="tel:+84905776415">Contact now</a>
                     </div>
@@ -149,7 +151,7 @@
             </div>
         </div>
         <div>
-            <ul id="where-to-taste">WHERE TO TASTE</ul>
+            <ul id="where-to-taste">WHERE TO TASTE in hoi an</ul>
             <div class="gelato-maps">
                 <div class="addresses">
                     <div class="address-card">
@@ -191,15 +193,21 @@
         </div>
         <footer>
             <div style="width: 100%;">
-                <div class="blank-space-footer"></div>
+                <div class="blank-space-resize"></div>
+                <div class="blank-space-resize"></div>
+                <div class="blank-space-resize"></div>
                 <div style="display: flex; font-family: 'UVNHongHaHep'; color: white; font-size: 18px;">
                     <img style="width: 117px; height: 72px;" src="./images/logo.png">
                     <div style="margin-left: 30px; width: 40%;">
                         <ul style="color: #e74e4e; font-size: 30px;">Đà Nẵng</ul>
-                        <ul>03 Lê Thánh Tôn street, Hải Châu district</ul>
-                        <ul>Lô 16-18 An Thượng 32 street, Ngũ Hành Sơn district</ul>
+                        <ul>03 Lê Thánh Tôn, Hải Châu</ul>
+                        <ul>Lô 16-18 An Thượng 32, Ngũ Hành Sơn</ul>
                         <ul style="color: #e74e4e; font-size: 30px;">Hội An</ul>
-                        <ul>54 Nguyễn Thị Minh Khai street, Cẩm Phô</ul>
+                        <ul>54 Nguyễn Thị Minh Khai, Minh An</ul>
+                        <ul>93 Phan Châu Trinh, Minh An</ul>
+                        <ul>128 Nguyễn Thái Học, Minh An</ul>
+                        <ul style="color: #e74e4e; font-size: 30px;">TP Hồ Chí Minh</ul>
+                        <ul>32 Đường 2C, Phú Mỹ, District 7</ul>
                     </div>
                     <div  style="margin-left: 30px; display: grid; width: 20%;">
                         <ul style="color: #e74e4e; font-size: 30px;">Products</ul>
@@ -277,13 +285,6 @@
     <script>
         $(window).on("load", function () {
             document.getElementById("content").style= null;
-        });
-    </script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('*').bind('cut copy paste contextmenu', function (e) {
-                e.preventDefault();
-            })
         });
     </script>
     <script src="burger-nav.js"></script>
