--- a/public/pizza.html
+++ b/public/pizza.html
@@ -88,15 +88,21 @@
         </div>
         <footer>
             <div style="width: 100%;">
-                <div class="blank-space-footer"></div>
+                <div class="blank-space-resize"></div>
+                <div class="blank-space-resize"></div>
+                <div class="blank-space-resize"></div>
                 <div style="display: flex; font-family: 'UVNHongHaHep'; color: white; font-size: 18px;">
                     <img style="width: 117px; height: 72px;" src="./images/logo.png">
                     <div style="margin-left: 30px; width: 40%;">
                         <ul style="color: #e74e4e; font-size: 30px;">Đà Nẵng</ul>
-                        <ul>03 Lê Thánh Tôn street, Hải Châu district</ul>
-                        <ul>Lô 16-18 An Thượng 32 street, Ngũ Hành Sơn district</ul>
+                        <ul>03 Lê Thánh Tôn, Hải Châu</ul>
+                        <ul>Lô 16-18 An Thượng 32, Ngũ Hành Sơn</ul>
                         <ul style="color: #e74e4e; font-size: 30px;">Hội An</ul>
-                        <ul>54 Nguyễn Thị Minh Khai street, Cẩm Phô</ul>
+                        <ul>54 Nguyễn Thị Minh Khai, Cẩm Phô</ul>
+                        <ul>93 Phan Châu Trinh, Minh An</ul>
+                        <ul>128 Nguyễn Thái Học, Minh An</ul>
+                        <ul style="color: #e74e4e; font-size: 30px;">TP Hồ Chí Minh</ul>
+                        <ul>32 Đường 2C, Phú Mỹ, District 7</ul>
                     </div>
                     <div style="margin-left: 30px; display: grid; width: 20%;">
                         <ul style="color: #e74e4e; font-size: 30px;">Products</ul>
@@ -166,13 +172,6 @@
                 document.getElementById("content").style = null;
             });
         } catch (e) { };
-    </script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('*').bind('cut copy paste contextmenu', function (e) {
-                e.preventDefault();
-            })
-        });
     </script>
     <script src="burger-nav.js"></script>
 </body>
