Update new Gelatos and Services for wholesale

--- a/public/admin.html
+++ b/public/admin.html
@@ -54,6 +54,8 @@
                             <label for="isHotdog"> HOTDOG</label><br>
                             <input type="checkbox" id="isPizza" name="isPizza" value="Pizza">
                             <label for="isPizza"> PIZZA</label><br>
+                            <input type="checkbox" id="isGelato" name="isGelato" value="Gelato">
+                            <label for="isGelato"> GELATO</label><br>
                             <label for="photo">Chọn hình:</label>
                             <input type="file" id="photo" name="photo" accept="image/*">
                             <button type="submit" value="Submit" id="btn-post">POST</button>
