--- a/public/gelato.html
+++ b/public/gelato.html
@@ -51,9 +51,9 @@
                 <button id="btn-explore">CHECK IT OUT</button>
             </div>
             <div class="blank-space-resize"></div>
-            <div class="products-cards" style="display: inline;" id="products-cards">
+            <div class="products-cards" id="products-cards-gelatos" style="display: inline;">
                 <ul id="flavours">General Flavours</ul>
-                <div class="products-cards">
+                <!-- <div class="products-cards">
                     <div class="product-card">
                         <img src="./images/CardChocolate.png">
                         <ul style="color: #402010;">Chocolate</ul>
@@ -82,7 +82,7 @@
                         <ul style="color: #e68d00;" id="mango">Mango</br>
                             Sorbet</ul>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="blank-space-resize"></div>
         </div>
@@ -245,6 +245,7 @@
             </div>
         </footer>
     </div>
+    <script src="loadImage.js"></script>
     <script>
         document.getElementById("btn-explore").onclick = function () {
             setTimeout(function () {
