--- a/public/pizza.html
+++ b/public/pizza.html
@@ -86,6 +86,10 @@
             <div class="blank-space-resize"></div>
             <div class="blank-space"></div>
         </div>
+        <div style="display: flex;">
+            <img style="width: 60vw;" src="./images/2 pizza .png">
+            <img id="delicious-text" src="./images/DELICIOUS.png">
+        </div>
         <footer>
             <div style="width: 100%;">
                 <div class="blank-space-resize"></div>
