--- a/public/services.html
+++ b/public/services.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <head>
     <title>Services - Ivo Deli</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -84,42 +83,14 @@
         <div style="text-align: center; margin-top: 50px; width: 100%; font-size: 80pt; font-family: 'Masterplan'; color: #1ac4ee;">
             WE also have pizza and gelato for wholesale
         </div>
-        <div class="products-cards" id="products-cards">
-            <div style="width: 70%">
+        <div class="products-cards" >
+            <div style="width: 70%" id="products-cards-gelatos">
                 <div style="text-align: center; margin-top: 10px; width: 100%; font-size: 30pt; font-family: 'Masterplan'; color: #1ac4ee; opacity: 0.6;">
                     Many sorbets for choosing
                 </div>
-                <div class="products-cards">
-                    <div class="product-card-gelato">
-                        <img src="./images/CardChocolate.png">
-                        <ul style="color: #402010;">Chocolate</ul>
-                    </div>
-                    <div class="product-card-gelato">
-                        <img src="./images/CardCoconut.png">
-                        <ul style="color: #89604b;" id="coconut">Coconut</ul>
-                    </div>
-                    <div class="product-card-gelato">
-                        <img src="./images/CardVanilla.png">
-                        <ul style="color: #7a4a41;">Vanilla</ul>
-                    </div>
-                </div>
-                <div class="products-cards">
-                    <div class="product-card-gelato">
-                        <img src="./images/CardStrawberry.png">
-                        <ul style="color: #b71020;" id="strawberry">Strawberry</ul>
-                    </div>
-                    <div class="product-card-gelato">
-                        <img src="./images/CardDurian.png">
-                        <ul style="color: #5a4e17;" id="durian">Durian & Sugar Cane</ul>
-                    </div>
-                    <div class="product-card-gelato">
-                        <img src="./images/CardMango.png">
-                        <ul style="color: #e68d00;" id="mango">Mango</ul>
-                    </div>
-                </div>
-                <div class="blank-space-resize"></div>
             </div>
         </div>
+        <img style="width: 70%; margin-left: 15vw;" src="./images/Wholesale.png">
         <div style="display: flex; width: 100%; justify-content: center; ">
             <div class="call-button">
                 <a href="tel:+84905776415">Call now</a>
@@ -189,6 +160,7 @@
             </div>
         </footer>
     </div>
+    <script src="loadImage.js"></script>
     <script>
         document.getElementById("vietnamese").onclick = function () {
             window.location.hash = '#vie';
