No PCT address in pages

--- a/public/gelato.html
+++ b/public/gelato.html
@@ -163,7 +163,7 @@
                             <ul style="font-weight: bold; margin-left: 40px; margin-top: 10px;">Hours: 09:00 - 22:00</ul>
                         </div>
                     </div>
-                    <div class="address-card">
+                    <!-- <div class="address-card">
                         <div class="address-card-text">
                             <div style="display: flex;"><img style="width: 24px; height: 30px;" src="./images/shop-icon.png">
                                 <ul style="font-family: UVNSachVo; margin-left: 16px; color: #d44545; font-size: 24px;">IVO DELI Gelato Stall</ul></div>
@@ -171,7 +171,7 @@
                             <ul style="margin-left: 40px; color: gray;">Hoi An city, Quang Nam</ul>
                             <ul style="font-weight: bold; margin-left: 40px; margin-top: 10px;">Hours: 10:00 - 22:00</ul>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="address-card">
                         <div class="address-card-text">
                             <div style="display: flex;"><img style="width: 24px; height: 30px;" src="./images/shop-icon.png">
@@ -185,7 +185,7 @@
                     <div class="blank-space-resize"></div>
                 </div>
                 <div class="maps-container">
-                    <div class="hover-display" id="shop-pct"><img src="./images/PCTShop.png"></div>
+                    <!-- <div class="hover-display" id="shop-pct"><img src="./images/PCTShop.png"></div> -->
                     <div class="hover-display" id="shop-ntmk"><img src="./images/NTMKShop.png"></div>
                     <div class="hover-display" id="shop-nth"><img src="./images/NTHShop.png"></div>
                 </div>
@@ -204,7 +204,7 @@
                         <ul>Lô 16-18 An Thượng 32, Ngũ Hành Sơn</ul>
                         <ul style="color: #e74e4e; font-size: 30px;">Hội An</ul>
                         <ul>54 Nguyễn Thị Minh Khai, Minh An</ul>
-                        <ul>93 Phan Châu Trinh, Minh An</ul>
+                        <!-- <ul>93 Phan Châu Trinh, Minh An</ul> -->
                         <ul>128 Nguyễn Thái Học, Minh An</ul>
                         <ul style="color: #e74e4e; font-size: 30px;">TP Hồ Chí Minh</ul>
                         <ul>32 Đường 2C, Phú Mỹ, District 7</ul>
