--- a/public/burger.html
+++ b/public/burger.html
@@ -135,7 +135,7 @@
                         <ul>Lô 16-18 An Thượng 32, Ngũ Hành Sơn</ul>
                         <ul style="color: #e74e4e; font-size: 30px;">Hội An</ul>
                         <ul>54 Nguyễn Thị Minh Khai, Cẩm Phô</ul>                        
-                        <ul>93 Phan Châu Trinh, Minh An</ul>
+                        <!-- <ul>93 Phan Châu Trinh, Minh An</ul> -->
                         <ul>128 Nguyễn Thái Học, Minh An</ul>
                         <ul style="color: #e74e4e; font-size: 30px;">TP Hồ Chí Minh</ul>
                         <ul>32 Đường 2C, Phú Mỹ, District 7</ul>
