--- a/public/gelato.html
+++ b/public/gelato.html
@@ -185,7 +185,7 @@
                     <div class="blank-space-resize"></div>
                 </div>
                 <div class="maps-container">
-                    <!-- <div class="hover-display" id="shop-pct"><img src="./images/PCTShop.png"></div> -->
+                    <div class="hover-display" id="shop-pct"></div>
                     <div class="hover-display" id="shop-ntmk"><img src="./images/NTMKShop.png"></div>
                     <div class="hover-display" id="shop-nth"><img src="./images/NTHShop.png"></div>
                 </div>
